fixed storymode overflow issue

--- a/style.css
+++ b/style.css
@@ -390,6 +390,10 @@ label {
     .storymode .card img {
         height: calc(100% - 2cm);
     }
+
+    .storymode .card video.mediaFile {
+        marin-bottom: 1cm;
+    }
     
     :not(.storymode) > #main-grid {
         grid-gap: 3cm 0.5cm;
